--- a/app/src/main/res/drawable/edit_text_box.xml
+++ b/app/src/main/res/drawable/edit_text_box.xml
@@ -4,5 +4,5 @@
     <corners android:radius="@dimen/_10sdp" />
     <stroke
         android:width="@dimen/_1sdp"
-        android:color="#A80039" />
+        android:color="@color/white" />
 </shape>
