--- a/app/src/main/res/layout/custom_nav_btn.xml
+++ b/app/src/main/res/layout/custom_nav_btn.xml
@@ -26,13 +26,13 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_2sdp"
             android:contentDescription="@string/app_name"
-            android:src="@drawable/home_dark" />
+            android:src="@drawable/home" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="All"
-            android:textColor="@color/black"
+            android:text="@string/home"
+            android:textColor="@color/white"
             android:textStyle="bold" />
     </LinearLayout>
 
@@ -61,7 +61,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Premium"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textStyle="bold" />
     </LinearLayout>
 
@@ -74,7 +74,7 @@
         android:orientation="vertical">
 
         <View
-            android:id="@+id/nav_cart_indicator"
+            android:id="@+id/nav_pro_indicator"
             android:layout_width="@dimen/_5sdp"
             android:layout_height="@dimen/_5sdp"
             android:background="@drawable/nav_item_indicator" />
@@ -84,13 +84,13 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_2sdp"
             android:contentDescription="@string/app_name"
-            android:src="@drawable/profile_dark" />
+            android:src="@drawable/profile" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Profile"
-            android:textColor="@color/black"
+            android:text="@string/profile"
+            android:textColor="@color/white"
             android:textStyle="bold" />
     </LinearLayout>
 
