--- a/admindollar/src/main/res/layout/activity_image.xml
+++ b/admindollar/src/main/res/layout/activity_image.xml
@@ -16,7 +16,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:title="@string/show_all_post_images"
+        app:title="@string/show_free_images"
         app:titleTextColor="@color/white" />
 
     <androidx.recyclerview.widget.RecyclerView
