--- a/admindollar/src/main/res/layout/activity_main.xml
+++ b/admindollar/src/main/res/layout/activity_main.xml
@@ -60,33 +60,37 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="@dimen/_10sdp"
+                android:layout_marginTop="@dimen/_8sdp"
                 android:gravity="center"
                 android:orientation="horizontal">
 
-                <EditText
-                    android:id="@+id/decTV"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="@dimen/_5sdp"
-                    android:layout_weight="1"
-                    android:background="@drawable/edit_text_box"
-                    android:hint="@string/write_image_tag_using"
-                    android:importantForAutofill="no"
-                    android:inputType="textMultiLine"
-                    android:padding="@dimen/_5sdp"
-                    android:textColor="@color/white"
-                    android:textColorHint="@color/colorOverlay" />
-
-                <ImageView
+                <TextView
                     android:id="@+id/uploadBtn"
-                    android:layout_width="@dimen/_30sdp"
-                    android:layout_height="@dimen/_30sdp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_margin="@dimen/_5sdp"
                     android:background="@drawable/nav_box"
                     android:contentDescription="@string/app_name"
+                    android:drawableStart="@drawable/upload"
+                    android:drawablePadding="@dimen/_2sdp"
+                    android:gravity="center"
                     android:padding="@dimen/_5sdp"
-                    android:src="@drawable/upload" />
+                    android:text="Free Image Upload"
+                    android:textColor="@color/white" />
+
+                <TextView
+                    android:id="@+id/premiumUploadBtn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/_5sdp"
+                    android:background="@drawable/nav_box"
+                    android:contentDescription="@string/app_name"
+                    android:drawableStart="@drawable/premium_upload"
+                    android:drawablePadding="@dimen/_2sdp"
+                    android:gravity="center"
+                    android:padding="@dimen/_5sdp"
+                    android:text="Premium Image Upload"
+                    android:textColor="@color/white" />
 
             </LinearLayout>
 
