--- a/app/src/main/res/drawable/home.xml
+++ b/app/src/main/res/drawable/home.xml
@@ -5,7 +5,7 @@
     android:viewportHeight="17">
 
     <path
-        android:fillColor="#FFFFFF"
+        android:fillColor="@color/white"
         android:fillType="evenOdd"
         android:pathData="M8,16L8,11L12,11L12,16C12,16.55 12.45,17 13,17L16,17C16.55,17 17,16.55 17,16L17,9L18.7,9C19.16,9 19.38,8.43 19.03,8.13L10.67,0.6C10.29,0.26 9.71,0.26 9.33,0.6L0.97,8.13C0.63,8.43 0.84,9 1.3,9L3,9L3,16C3,16.55 3.45,17 4,17L7,17C7.55,17 8,16.55 8,16Z"
         android:strokeWidth="1"
