--- a/app/src/main/res/drawable/menu.xml
+++ b/app/src/main/res/drawable/menu.xml
@@ -4,6 +4,6 @@
     android:viewportWidth="92"
     android:viewportHeight="92">
     <path
-        android:fillColor="#FFFFFFFF"
+        android:fillColor="@color/white"
         android:pathData="M78,23.5H14c-3.6,0 -6.5,-2.9 -6.5,-6.5s2.9,-6.5 6.5,-6.5h64c3.6,0 6.5,2.9 6.5,6.5S81.6,23.5 78,23.5zM84.5,46c0,-3.6 -2.9,-6.5 -6.5,-6.5H14c-3.6,0 -6.5,2.9 -6.5,6.5s2.9,6.5 6.5,6.5h64C81.6,52.5 84.5,49.6 84.5,46zM84.5,75c0,-3.6 -2.9,-6.5 -6.5,-6.5H14c-3.6,0 -6.5,2.9 -6.5,6.5s2.9,6.5 6.5,6.5h64C81.6,81.5 84.5,78.6 84.5,75z" />
 </vector>
