--- a/app/src/main/res/layout/activity_set_wallpaper.xml
+++ b/app/src/main/res/layout/activity_set_wallpaper.xml
@@ -5,7 +5,6 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimaryDark"
     tools:context=".SetWallpaper.SetWallpaperActivity">
 
 
@@ -14,7 +13,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:contentDescription="@string/app_name"
-        android:scaleType="fitXY" />
+        android:scaleType="fitXY"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
     <ImageView
@@ -40,7 +43,7 @@
         app:layout_constraintEnd_toEndOf="@id/setImage"
         app:layout_constraintStart_toStartOf="@id/setImage">
 
-        <ImageView
+       <!-- <ImageView
             android:id="@+id/shareBtn"
             android:layout_width="40dp"
             android:layout_height="40dp"
@@ -49,7 +52,7 @@
             android:background="@drawable/nav_box"
             android:contentDescription="@string/app_name"
             android:padding="8dp"
-            android:src="@drawable/share" />
+            android:src="@drawable/share" />-->
 
         <Button
             android:id="@+id/ApplyBtn"
@@ -66,7 +69,7 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_marginStart="8dp"
-            android:alpha="0.5"
+            android:alpha="0.8"
             android:background="@drawable/nav_box"
             android:contentDescription="@string/app_name"
             android:padding="8dp"
@@ -99,7 +102,7 @@
                 android:layout_margin="1dp"
                 android:background="@drawable/text_box"
                 android:padding="@dimen/_5sdp"
-                android:text="@string/desktop_wallpaper"
+                android:text="@string/home_wallpaper"
                 android:textColor="@color/black"
                 android:textSize="@dimen/_15sdp"
                 android:textStyle="bold"
