--- a/app/src/main/res/layout/forget_pass_dialog.xml
+++ b/app/src/main/res/layout/forget_pass_dialog.xml
@@ -1,32 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center"
-    android:background="@color/colorPrimaryDark"
     android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"
         android:padding="@dimen/_5sdp"
         android:gravity="center"
         android:orientation="horizontal">
+
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="@string/forget_password"
             android:layout_weight="1"
             android:gravity="center"
-            android:textColor="@color/loginLinkTextColor"
-            android:textSize="@dimen/_20sdp"
-            android:textStyle="bold"/>
+            android:text="@string/forget_password"
+            android:textColor="@color/white"
+            android:textSize="25sp"
+            android:textStyle="bold"
+            tools:ignore="TextSizeCheck" />
         <ImageView
             android:id="@+id/cBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:padding="8dp"
             android:contentDescription="@string/category"
             android:src="@drawable/cancel"
             app:tint="@color/white" />
@@ -36,17 +38,19 @@
         android:id="@+id/userEmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_10sdp"
         android:layout_marginStart="@dimen/_15sdp"
+        android:layout_marginTop="@dimen/_10sdp"
         android:layout_marginEnd="@dimen/_15sdp"
         android:layout_marginBottom="@dimen/_5sdp"
         android:autofillHints="username"
         android:background="@drawable/edit_text_box"
         android:hint="@string/email"
         android:inputType="textEmailAddress"
+        android:minHeight="48dp"
         android:padding="@dimen/_8sdp"
         android:textColor="@color/white"
-        android:textColorHint="@color/loginTextColor" />
+        android:textColorHint="@color/light_gray"
+        tools:ignore="VisualLintTextFieldSize" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/fBtn"
@@ -57,8 +61,9 @@
         android:background="@drawable/button_bg"
         android:ems="10"
         android:text="@string/send"
-        android:textColor="@color/white"
-        android:textSize="@dimen/_15sdp"
-        android:textStyle="bold" />
+        android:textColor="@color/black"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        tools:ignore="TextSizeCheck,VisualLintButtonSize" />
 
 </LinearLayout>
