--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,9 +2,8 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.DollarWallpaper" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorSecondary">@color/colorPrimaryDark</item>
-        <item name="android:windowIsTranslucent">true</item>
+       <item name="colorPrimary">@color/black</item>
+       <!--  <item name="colorSecondary">@color/colorPrimaryDark</item>-->
     </style>
 
     <style name="Theme.DollarWallpaper" parent="Base.Theme.DollarWallpaper" />
